--- a/StuDept/Views/Departments/Details.cshtml
+++ b/StuDept/Views/Departments/Details.cshtml
@@ -7,38 +7,19 @@
 <h1>Details</h1>
 
 <div>
-    <h4>Department</h4>
+    <h4>Department - @Model.Name</h4>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Name)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Students)
-        </dt>
-        <dd class="col-sm-10">
-            @foreach(var students in Model.Students)
-            {
-            <dl class="row">
-                <dt class="col-4">
-                    @students.Name
-                </dt>
-                <dt class="col-4">
-                    @students.Surname
-                </dt>
-            </dl>
-            }
-        </dd>
-    </dl>
+    @foreach (var student in Model.Students)
+    {
+        <dl class="row">
+            <dt class="col-sm-2">
+                @student.Name
+            </dt>
+            <dd class="col-sm-10">
+                <a asp-controller="Students" asp-action="Details" asp-route-id="@student.Id" class="btn btn-primary"> Info </a>
+            </dd>
+        </dl>
+    }
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
