--- a/StuDept/Views/Shared/_Layout.cshtml
+++ b/StuDept/Views/Shared/_Layout.cshtml
@@ -83,8 +83,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <div class="main-content inner" id="home">
 
     </div>
-
-    @RenderBody()
+    <section class="ab-info-main py-md-5">
+        <div class="container py-md-3">
+            <div class="speak px-lg-5">
+                @RenderBody()
+            </div>
+        </div>
+    </section>
     <!-- footer -->
     <footer class="footer-content py-5">
         <div class="container-fluid py-lg-5 inner-sec-w3ls">
